--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
+    "react-to-print": "^3.2.0",
     "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.18"
   },
