--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-router-dom": "^7.12.0",
     "react-to-print": "^3.2.0",
     "sweetalert2": "^11.26.17",
